--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no' >
+    <link rel="icon" href="%PUBLIC_URL%/Favicon.ico" />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no' >
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="MTG Builder App"
+      content="Website To Search For MTG Cards and Create Decks"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
